force-app/main/default/objects/init_vals__c/init_vals__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Initial values</label>
</CustomObject>