force-app/main/default/objects/init_vals__c/fields/Cost_per_W_DC__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_W_DC__c</fullName>
    <label>Cost per W/DC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>