force-app/main/default/objects/init_vals__c/fields/Interest_on_Full_Loan_During_SDPeriod__c.field-meta.xml
<CustomField>
    <fullName>Interest_on_Full_Loan_During_SDPeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest Only on Full Loan During SDPeri</label>
    <type>Checkbox</type>
</CustomField>