force-app/main/default/objects/init_vals__c/fields/Investment_Tax_Credit__c.field-meta.xml
<CustomField>
    <fullName>Investment_Tax_Credit__c</fullName>
    <label>Investment Tax Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>