force-app/main/default/objects/init_vals__c/fields/Period_of_Rebate_Applied_SC_Specific__c.field-meta.xml
<CustomField>
    <fullName>Period_of_Rebate_Applied_SC_Specific__c</fullName>
    <label>Period of Rebate Applied (SC Specific)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>