force-app/main/default/objects/init_vals__c/fields/Principal_SD_Period_upon_ITC_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Principal_SD_Period_upon_ITC_Receipt__c</fullName>
    <label>Principal SD-Period upon ITC Receipt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>