force-app/main/default/objects/init_vals__c/fields/Rebate_for_SDPeriod__c.field-meta.xml
<CustomField>
    <fullName>Rebate_for_SDPeriod__c</fullName>
    <label>Rebate ($) - Applied at Step Down Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>